static/css/post_list.css
html {
  padding-top: 0;
  margin-top: 0;
}

body {
  background-image: url(../images/blue-wallpaper-preview-24.jpg);
  background-size: cover;
}
header {
  padding-top: 6rem;
  margin-left: 1rem;
}

header h1 {
  color: white;
  margin-top: 0;
  display: block;
}

header .header-text {
  font-size: 1.5rem;
  color: white;
}

.blog-container {
  margin: 0 20rem;
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
  background-color: white;
}
.blogs-rendered {
  display: block;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 75%;
  height: auto;
}

.posts {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  background-color: white;
}

.twitter-feed {
  display: flex;
  justify-content: center;
  width: 25%;
  height: auto;
  background-color: white;
}
.title {
  display: flex;
  justify-content: center;
  margin: 1rem 0;
  width: 100%;
  height: auto;
  font-family: Volkorn, serif;
  font-size: 3rem;
  color: navy;
}

.tagline {
  display: flex;
  justify-content: center;
  width: 100%;
  height: auto;
  font-family: Yantramanav, sans-serif;
  font-size: 1.25rem;
  margin: 0;
}

.blogs-rendered .text {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 80%;
  height: auto;
  font-family: Yantramanav, sans-serif;
  font-size: 2rem;
}

.blogs-rendered hr {
  border: 1px dashed darkgray;
  width: 50%;
}

